--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -4,3 +4,5 @@ RewriteRule ^autor/new ./formauthors.php [L,QSA]
 RewriteRule ^autor/(.*)$ ./formauthors.php?id_author=$1 [L,QSA]
 RewriteRule ^genres/new ./formgenres.php [L,QSA]
 RewriteRule ^genres/(.*)$ ./formgenres.php?id_genre=$1 [L,QSA]
+RewriteRule ^books/new ./formbooks.php [L,QSA]
+RewriteRule ^books/(.*)$ ./formbooks.php?id_book=$1 [L,QSA]
